--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
+  "version": 2,
+  "outputDirectory": ".",
+  "builds": [
+    {
+      "src": "app/main.py",
+      "use": "@vercel/python"
+    }
+  ],
   "rewrites": [
-    { "source": "/(.*)", "destination": "/app/main.py" }
+    {
+      "source": "/(.*)",
+      "destination": "app/main.py"
+    }
   ]
 }
